force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/T_qtc_Active_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>T_qtc_Active_Invoice_Line</label>
    <nameField>
        <label>T_qtc_Active Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_Active_Invoice_Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>