force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>40</length>
    <type>Text</type>
</CustomField>