force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Amount_Credit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credit__c</fullName>
    <label>Amount(Credit)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>