force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Amount_Debit_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Debit_Foreign_Currency__c</fullName>
    <label>Amount (Debit) (Foreign Currency)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>