force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Contract_Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item_Start_Date__c</fullName>
    <label>Contract Item Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>