force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Invoice_line_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_line_Type__c</fullName>
    <label>Invoice line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>