force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Item_Rate_Amount_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate_Amount_without_Symbol__c</fullName>
    <label>Item Rate Amount without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>