force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Line_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Sequence_Number__c</fullName>
    <label>Line Sequence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>