force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/of_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Months__c</fullName>
    <label>of Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>