force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/ProServe_Software__c.field-meta.xml
<CustomField>
    <fullName>ProServe_Software__c</fullName>
    <label>ProServe/Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>