force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Rev_Rec_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Start_Date__c</fullName>
    <label>Rev Rec Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>