force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/Sales_Order_line_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_line_ID__c</fullName>
    <label>Sales Order line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>