force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/T_OSAMatched__c.field-meta.xml
<CustomField>
    <fullName>T_OSAMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped OSA number in T_OSA</description>
    <label>T_OSAMatched?</label>
    <type>Checkbox</type>
</CustomField>