force-app/main/default/objects/T_qtc_Active_Invoice_Line__c/fields/T_SourceFileName__c.field-meta.xml
<CustomField>
    <fullName>T_SourceFileName__c</fullName>
    <label>T_SourceFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>